--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <link href="style.css" rel="stylesheet" />
+    <head>
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="https://www.instagram.com/p/C4364f8gdAR/$0" width="150" />
+    <img src="IMG_7556.jpeg" width="150" />
     <h1> Gabriela Diniz </h1>
     <h2> Gabi é uma mulher decidida e focada no seu objetivo; ela é guerreira e busca sempre a vitória. </h2>
     <p> Seja muito bem-vindo à minha página! </p>
